LU-7173 ldlm: do not grant intent-only lock

In ldlm_process_inodebits_lock(), do not grant intent-only lock
on lock server side, ldlm_lock_enqueue() could destroy it right
away, presuming that it's intent-only and expecting it no granted.

Add debug message for this case and if it is shown, it is confirmed
then.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I9cb5095779284e0f99b0a8b31e2178b354d3a233